# InterviewerAgent

./: .gitignore  AGENTS.md  CLAUDE.md  README.MD  experimentation.ipynb  experimentation_part2.ipynb  interview.cmd  pyproject.toml
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
interviewer_agent/: __init__.py  cli.py  controller.py  engine.py  models.py  parsing.py  progress.py  ui.py  workflow.py
scripts/: generate_diagrams.py
tests/: test_cli_practice.py  test_controller.py  test_models.py  test_parsing.py  test_progress.py  test_ui.py  test_workflow_config.py
